# hello-world-cli

./: pyproject.toml
script/: bootstrap.py
tests/: test_main.py
