[tool.poetry]
name = "hello-world-cli"
version = "0.1.0"
description = ""
authors = ["giorrgos <38963601+giorrgos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
